--- a/lib/Makefile
+++ b/lib/Makefile
@@ -31,7 +31,7 @@ BASEDIR=$(SRCDIR)/..
 
 include $(BASEDIR)/config/make.defs
 
-CSRCS=sio.c lsqrt.c lsqrt64.c sprintf.c printf.c premain.c gpio.c pwm.c ad.c timer.c teclado.c
+CSRCS=sio.c lsqrt.c lsqrt64.c sprintf.c printf.c premain.c gpio.c pwm.c ad.c timer.c teclado.c display.c motor.c
 
 OBJS=$(CSRCS:.c=.o)
 
